--- a/requirements.txt
+++ b/requirements.txt
@@ -6,10 +6,11 @@ Werkzeug==3.0.3
 SQLAlchemy==2.0.30
 numpy==1.24.3
 opencv-python-headless==4.8.0.74
-face_recognition==1.3.0
 pytz==2023.3
 MarkupSafe==2.1.5
-dlib==19.24.2
 Pillow==10.0.0
 gunicorn==21.2.0
 psycopg2-binary==2.9.7
+# Alternative face recognition tanpa dlib
+mediapipe==0.10.7
+scikit-learn==1.3.2
